# gettingstarted-am-rs

./: Cargo.toml  README.md  am.toml
src/: main.rs  tui.rs
