[package]
name = "gettingstarted-am-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
autometrics = { version = "0.5.0", features = ["prometheus-exporter"] }
axum = "0.6.20"
tokio = { version = "1.29.1", features = ["full"] }

[build-dependencies]
vergen = { version = "8.1", features = ["git", "gitcl"] }
