[package]
name = "gettingstarted-am-rs"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75" }
autometrics = { version = "0.6.0", features = ["prometheus-exporter"] }
axum = "0.6.20"
crossterm = { version = "0.27.0", features = ["event-stream", "serde"] }
futures = "0.3.29"
rand = "0.8.5"
ratatui = "0.24.0"
serde = "1.0.190"
signal-hook = "0.3.17"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = "0.7.10"
tui-term = "0.1.5"

[build-dependencies]
vergen = { version = "8.1", features = ["git", "gitcl"] }
