[package]
name = "gettingstarted-am-rs"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/autometrics-dev/gettingstarted-am-rs"

[dependencies]
autometrics = { version = "1.0.0", features = ["prometheus-exporter"] }
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }

[build-dependencies]
vergen = { version = "8.2.6", features = ["git", "gitcl"] }
